<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_climatological_probe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ruben.connecttomysql.climatologicalProbe.EditClimatologicalProbeActivity">

    <TextView
        android:text="@string/moisture_lower_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:id="@+id/textView18" />

    <TextView
        android:text="@string/moisture_upper_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView18"
        android:layout_alignLeft="@+id/textView18"
        android:layout_alignStart="@+id/textView18"
        android:layout_marginTop="54dp"
        android:id="@+id/textView19" />

    <TextView
        android:text="@string/humidity_lower_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView19"
        android:layout_alignLeft="@+id/textView19"
        android:layout_alignStart="@+id/textView19"
        android:layout_marginTop="49dp"
        android:id="@+id/textView20" />

    <TextView
        android:text="@string/humidity_upper_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView20"
        android:layout_alignLeft="@+id/textView20"
        android:layout_alignStart="@+id/textView20"
        android:layout_marginTop="51dp"
        android:id="@+id/textView21" />

    <TextView
        android:text="@string/temperature_lower_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView21"
        android:layout_alignLeft="@+id/textView21"
        android:layout_alignStart="@+id/textView21"
        android:layout_marginTop="56dp"
        android:id="@+id/textView22" />

    <TextView
        android:text="@string/temperature_upper_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView22"
        android:layout_alignLeft="@+id/textView22"
        android:layout_alignStart="@+id/textView22"
        android:layout_marginTop="44dp"
        android:id="@+id/textView23" />

    <Button
        android:text="@string/aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/buttonAceptarClimatologicalProbe" />

    <Switch
        android:text="@string/active_climatological_probe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/switchActiveClimatologicalProbe2"
        android:layout_below="@+id/textView23"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_above="@+id/textView20"
        android:layout_toRightOf="@+id/textView19"
        android:layout_toEndOf="@+id/textView19"
        android:layout_marginBottom="54dp"
        android:id="@+id/editTextSoilLower" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/textView18"
        android:layout_toRightOf="@+id/textView20"
        android:layout_toEndOf="@+id/textView20"
        android:layout_marginTop="43dp"
        android:id="@+id/editTextSoilUpper" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/editTextSoilUpper"
        android:layout_toRightOf="@+id/textView21"
        android:layout_toEndOf="@+id/textView21"
        android:layout_marginTop="21dp"
        android:id="@+id/editTextHumidityLower" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/editTextHumidityLower"
        android:layout_toRightOf="@+id/textView21"
        android:layout_toEndOf="@+id/textView21"
        android:layout_marginTop="23dp"
        android:id="@+id/editTextHumidityUpper" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/editTextHumidityUpper"
        android:layout_toRightOf="@+id/textView23"
        android:layout_toEndOf="@+id/textView23"
        android:layout_marginTop="32dp"
        android:id="@+id/editTextTemperatureLower" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTextTemperatureUpper"
        android:layout_alignBaseline="@+id/textView23"
        android:layout_alignBottom="@+id/textView23"
        android:layout_toRightOf="@+id/textView23"
        android:layout_toEndOf="@+id/textView23"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />
</RelativeLayout>
